<resources>
    <string name="app_name">Flickr</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Flickr</string>
    <string name="nav_header_subtitle">chiihero@github</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="setting">设置</string>
    <string name="night_label">夜间模式</string>
    <string name="day_label">日间模式</string>
    <string name="menu_anzhuobizhi">安卓壁纸</string>
    <string name="menu_bilibili">哔哩哔哩</string>
    <string name="version">0.0.1</string>

    <string name="about">关于</string>
    <string name="github">Github</string>
</resources>
