<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bilibili"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_bilibili" />
        <item
            android:id="@+id/nav_anzhuobizhi"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_anzhuobizhi" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_daynight"
                android:title="@string/day_label" />

            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/setting" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
